# autotools-example

./: Makefile.am  configure.ac
src/: debug.c  hello-debug.c  helloworld.c
