AC_INIT([helloworld], [1.0], [geesun@gmail.com])

AC_PREREQ([2.68])

AC_CONFIG_SRCDIR([src/helloworld.c])

AC_CONFIG_AUX_DIR([build-aux])

AM_INIT_AUTOMAKE([silent-rules -Wall -Werror subdir-objects foreign])

AM_SILENT_RULES([yes])

AC_PROG_CC

AC_CONFIG_HEADERS([config.h])

AC_CONFIG_FILES([Makefile])

AC_OUTPUT
